added functionality splitting E-Mail-Adresses and writing out .msg files